FIX: align back button

--- a/src/style/components/_order-wizzard.scss
+++ b/src/style/components/_order-wizzard.scss
@@ -97,9 +97,6 @@
       margin-right: 15px;
     }
   }
-  &__cta {
-    padding-top: 30px;
-  }
   &__file-uploading {
     margin-bottom: 30px;
   }
